<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginTop="16dp"
            android:rotation="315"
            android:elevation="8dp"
            android:background="@drawable/rounded_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/title_bar_icon_top"
                android:text="@string/_2"
                android:textColorHighlight="#88FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                style="@style/title_bar_icon_top"
                android:text="@string/_10"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView6"
                style="@style/title_bar_icon_top"
                android:text="@string/_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView7"
                style="@style/title_bar_icon_top"
                android:text="@string/_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/title_bar"
            android:layout_marginTop="16dp"
            android:text="@string/decimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            style="@style/title_bar_icon"
            android:text="@string/_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"/>

        <EditText
            android:id="@+id/NumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:digits="0123456789"
            android:paddingHorizontal="@dimen/paddingL"
            android:hint="@string/decimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/title_bar"
            android:text="@string/binary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NumberDecimal" />
        <TextView
            style="@style/title_bar_icon"
            android:text="@string/_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />
        <EditText
            android:id="@+id/NumberBinary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="@dimen/paddingL"
            android:hint="@string/binary"
            android:digits="01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            style="@style/title_bar"
            android:text="@string/octal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NumberBinary" />
        <TextView
            style="@style/title_bar_icon"
            android:text="@string/_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />
        <EditText
            android:id="@+id/NumberOctal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="@dimen/paddingL"
            android:hint="@string/octal"
            android:digits="01234567"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            style="@style/title_bar"
            android:text="@string/hexa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NumberOctal" />
        <TextView
            style="@style/title_bar_icon"
            android:text="@string/_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />
        <EditText
            android:id="@+id/NumberHexa"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="@dimen/paddingL"
            android:hint="@string/hexa"
            android:digits="0123456789ABCDEF"
            android:inputType="textCapCharacters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/clear"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NumberHexa" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
